ported to work with py-brotherlabel for PT-P900W

--- a/views/labeldesigner.jinja2
+++ b/views/labeldesigner.jinja2
@@ -24,7 +24,12 @@
               <div class="chooser panel-body">
               <label for="labelSize" style="display: none">Label Size:</label>
               <select class="form-control" id="labelSize" onChange="preview()">
-                {% for label_size in label_sizes %}<option value="{{label_size[0]}}" {% if label['DEFAULT_SIZE'] == label_size[0] %}selected{% endif %}>{{label_size[1]}}</option>{% endfor %}
+                {% for label_size in label_sizes %}
+                    <option value="{{label_size}}" 
+                    {% if label['DEFAULT_SIZE'] == label_size %}selected{% endif %}>
+                    {{label_size}}
+                    </option>
+                {% endfor %}
               </select>
               <label for="orientation" style="margin-top: 10px; margin-bottom: 0">Label Orientation:</label>
               <div class="radio" style="margin-top: 5px;">
@@ -85,19 +90,19 @@
               <div class="chooser panel-body">
               <label for="marginTop">Margin Top:</label>
               <div class="input-group marginsTopBottom">
-                <input id="marginTop" class="form-control" type="number" min="0" max="200" value="24" onChange="preview()" required>    <span class="input-group-addon">%</span>
+                <input id="marginTop" class="form-control" type="number" min="0" max="200" value="5" onChange="preview()" required>    <span class="input-group-addon">%</span>
               </div>
               <label for="marginBottom">Margin Bottom:</label>
               <div class="input-group marginsTopBottom">
-                <input id="marginBottom" class="form-control" type="number" min="0" max="200" value="45" onChange="preview()" required> <span class="input-group-addon">%</span>
+                <input id="marginBottom" class="form-control" type="number" min="0" max="200" value="5" onChange="preview()" required> <span class="input-group-addon">%</span>
               </div>
               <label for="marginLeft">Margin Left:</label>
               <div class="input-group marginsLeftRight">
-                <input id="marginLeft" class="form-control" type="number" min="0" max="200" value="35" onChange="preview()" required>   <span class="input-group-addon">%</span>
+                <input id="marginLeft" class="form-control" type="number" min="0" max="200" value="10" onChange="preview()" required>   <span class="input-group-addon">%</span>
               </div>
               <label for="marginRight">Margin Right:</label>
               <div class="input-group marginsLeftRight">
-                <input id="marginRight" class="form-control" type="number" min="0" max="200" value="35" onChange="preview()" required>  <span class="input-group-addon">%</span>
+                <input id="marginRight" class="form-control" type="number" min="0" max="200" value="10" onChange="preview()" required>  <span class="input-group-addon">%</span>
               </div>
               </div> <!-- class="chooser panel-body" -->
             </div>
